kajit/src/snapshots/kajit__disasm_tests__disasm_json_nested_struct_x86_64.snap
---
source: kajit/src/disasm_tests.rs
expression: out
---
=== json/nested_struct ===
> push rbp
  sub rsp, 0xd0
  mov qword [rsp], rbp
  mov qword [rsp + 0x8], rbx
  mov qword [rsp + 0x10], r12
  mov qword [rsp + 0x18], r13
  mov qword [rsp + 0x20], r14
  mov qword [rsp + 0x28], r15
  mov r14, rdi
  mov r15, rsi
  mov r12, qword [r15]
  mov r13, qword [r15 + 0x8]
  mov qword [r15], r12
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x671
  mov r10, 0x0
  mov rcx, r10
  mov qword [rsp + 0x60], rcx
  mov r10, 0x7d
  mov rbx, r10
  mov r10, 0x3
  mov rax, r10
  mov qword [rsp + 0xb0], rax
  mov qword [r15], r12
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x602
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x5e4
  movzx r10d, byte [r12]
  mov rsi, r10
  mov r10, rsi
  cmp r10, rbx
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  test rbx, rbx
  jz $+0x5
  jmp $+0x22
  add r12, 0x1
  mov rcx, qword [rsp + 0x60]
  mov rbx, rcx
  mov rax, qword [rsp + 0xb0]
  mov rbx, rcx
  jmp $+0x531
  mov rcx, qword [rsp + 0x60]
  mov rax, rcx
  jmp $+0x0
  lea r10, qword [rsp + 0x30]
  mov rax, r10
  lea r10, qword [rsp + 0x38]
  mov rcx, r10
  mov r10, 0x0
  mov rbx, r10
  mov qword [rsp + 0x70], rbx
  mov r10, 0x<imm>
  mov rbx, r10
  mov qword [rsp + 0x78], rbx
  mov r10, 0x6
  mov rbx, r10
  mov qword [rsp + 0x80], rbx
  mov r10, 0x1
  mov rbx, r10
  mov r10, 0x<imm>
  mov rdx, r10
  mov qword [rsp + 0x90], rdx
  mov r10, 0x1
  mov rdx, r10
  mov qword [rsp + 0x98], rdx
  mov r10, 0x1
  mov rdx, r10
  mov qword [rsp + 0xa0], rdx
  mov r10, 0x2c
  mov rdx, r10
  mov qword [rsp + 0xa8], rdx
  mov qword [r15], r12
  push rax
  push rcx
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rcx
  pop rdx
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x495
  mov rax, qword [rsp + 0x70]
  mov r10, rax
  cmp r10, rbx
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  mov qword [rsp + 0x88], rbx
  mov r10, qword [rsp + 0x30]
  mov rax, r10
  mov qword [rsp + 0x60], rax
  mov r10, qword [rsp + 0x38]
  mov rax, r10
  mov qword [rsp + 0x68], rax
  mov qword [r15], r12
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x416
  mov rax, qword [rsp + 0x68]
  mov rcx, qword [rsp + 0x80]
  mov rdx, qword [rsp + 0x78]
  mov rbx, qword [rsp + 0x60]
  push rbx
  push rax
  push rdx
  push rcx
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov qword [rsp + 0x80], rbx
  mov rbx, qword [rsp + 0x60]
  mov rdx, qword [rsp + 0x98]
  mov rcx, qword [rsp + 0x90]
  mov rax, qword [rsp + 0x68]
  push rbx
  push rax
  push rcx
  push rdx
  pop rcx
  pop rdx
  pop rsi
  pop rdi
  mov rax, 0x<imm>
  call rax
  mov rbx, rax
  mov qword [rsp + 0x98], rbx
  mov rbx, qword [rsp + 0x88]
  mov rax, qword [rsp + 0x80]
  mov r10, rax
  and r10, rbx
  mov rbx, r10
  test rbx, rbx
  jz $+0x5
  jmp $+0x23
  mov rbx, qword [rsp + 0xb8]
  mov rcx, qword [rsp + 0x70]
  mov rax, rcx
  mov rax, rcx
  mov rcx, qword [rsp + 0xa0]
  jmp $+0x59
  mov rbx, qword [rsp + 0xb8]
  mov qword [r15], r12
  lea rdi, qword [r14]
  mov rsi, r15
  call $+0x34a
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x30d
  mov r10, 0x1
  mov rcx, r10
  mov r10, 0x1
  mov rax, r10
  mov r10, rbx
  or r10, rcx
  mov rbx, r10
  jmp $+0x0
  mov r10, rax
  cmp r10, rcx
  setnz r10b
  movzx r10, r10b
  mov rsi, r10
  mov rcx, qword [rsp + 0x98]
  mov r10, rcx
  and r10, rsi
  mov rdi, r10
  test rdi, rdi
  jz $+0x5
  jmp $+0xb
  mov rcx, rax
  mov rcx, rax
  jmp $+0x63
  mov qword [r15], r12
  lea r10, qword [r14 + 0x8]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x272
  mov r10, 0x2
  mov rcx, r10
  mov r10, 0x1
  mov rax, r10
  mov r10, rbx
  or r10, rcx
  mov rbx, r10
  mov rcx, rax
  jmp $+0x0
  test rcx, rcx
  jz $+0x5
  jmp $+0x48
  mov qword [r15], r12
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x201
  mov rax, rbx
  mov qword [rsp + 0xa0], rbx
  jmp $+0x8
  mov rax, rbx
  jmp $+0x0
  mov qword [r15], r12
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x1b1
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x193
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x175
  movzx r10d, byte [r12]
  mov rax, r10
  add r12, 0x1
  mov rbx, qword [rsp + 0xa8]
  mov r10, rax
  cmp r10, rbx
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  test rbx, rbx
  jz $+0x5
  jmp $+0x23
  mov r10, 0x1
  mov rbx, r10
  mov rax, rbx
  mov rcx, qword [rsp + 0xa0]
  mov rbx, rcx
  mov rbx, rcx
  jmp $+0xa4
  mov rcx, qword [rsp + 0xa0]
  mov rbx, rcx
  mov r10, 0x7d
  mov rcx, r10
  mov r10, rax
  cmp r10, rcx
  setnz r10b
  movzx r10, r10b
  mov rax, r10
  test rax, rax
  jz $+0x5
  jmp $+0x18
  mov r10, 0x0
  mov rax, r10
  mov rcx, rbx
  mov rcx, rbx
  jmp $+0x4d
  mov qword [r15], r12
  lea r10, qword [r14]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x95
  mov r10, 0x0
  mov rax, r10
  mov rcx, rbx
  jmp $+0x0
  mov rbx, rcx
  jmp $+0x0
  test rax, rax
  jnz $+0xd68
  jmp $+0x0
  mov r10, rbx
  and r10, rax
  mov rbx, r10
  mov r10, rbx
  cmp r10, rax
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  test rbx, rbx
  jz $+0x1a
  jmp $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0xa
  jmp $+0x2d
  mov qword [r15], r12
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbx, qword [rsp + 0x8]
  mov rbp, qword [rsp]
  add rsp, 0xd0
  pop rbp
  ret
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbx, qword [rsp + 0x8]
  mov rbp, qword [rsp]
  add rsp, 0xd0
  pop rbp
  ret
