kajit/src/snapshots/kajit__disasm_tests__disasm_json_vec_aarch64.snap
---
source: kajit/src/disasm_tests.rs
expression: out
---
=== json/vec ===
> sub sp, sp, #0xf0
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x504
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xd8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x4c0
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x4a8
  ldrb w9, [x19]
  mov x11, x9
  cmp x11, x24
  b.ne $+0x18
  add x19, x19, #0x1
  mov x11, x23
  mov x11, x23
  ldr x12, [sp, #0xd8]
  b $+0x448
  mov x14, x23
  add x9, sp, #0x50
  mov x11, x9
  add x9, sp, #0x58
  mov x26, x9
  mov x9, #<imm>
  mov x24, x9
  str x24, [sp, #0x88]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x12, x9
  mov x25, x12
  mov x9, #<imm>
  mov x12, x9
  str x12, [sp, #0x90]
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x12, x9
  str x12, [sp, #0xa0]
  mov x9, #<imm>
  mov x12, x9
  str x12, [sp, #0xa8]
  mov x9, #<imm>
  mov x12, x9
  str x12, [sp, #0xb0]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x12, x9
  str x12, [sp, #0xb8]
  mov x9, #<imm>
  mov x12, x9
  str x12, [sp, #0xc0]
  mov x9, #<imm>
  mov x12, x9
  str x12, [sp, #0xc8]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0xd0]
  str x19, [x22]
  mov x0, x22
  mov x1, x11
  mov x2, x26
  add x3, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x3a8
  ldr x11, [sp, #0x88]
  cmp x11, x23
  cset x12, ne
  str x12, [sp, #0x98]
  ldr x9, [sp, #0x50]
  mov x26, x9
  ldr x9, [sp, #0x58]
  mov x24, x9
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x360
  mov x11, x25
  ldr x12, [sp, #0x90]
  mov x0, x26
  mov x1, x24
  mov x2, x11
  mov x3, x12
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x25, x0
  ldr x11, [sp, #0xa0]
  ldr x12, [sp, #0xa8]
  mov x0, x26
  mov x1, x24
  mov x2, x11
  mov x3, x12
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x23, x0
  ldr x11, [sp, #0xb8]
  ldr x12, [sp, #0xc0]
  str x23, [sp, #0xa8]
  mov x0, x26
  mov x1, x24
  mov x2, x11
  mov x3, x12
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x24, x0
  ldr x12, [sp, #0x98]
  str x24, [sp, #0xc0]
  mov x11, x25
  and x11, x11, x12
  cbnz x11, $+0x20
  ldr x23, [sp, #0xe0]
  mov x11, x23
  ldr x13, [sp, #0x88]
  mov x12, x13
  mov x12, x13
  ldr x13, [sp, #0xb0]
  b $+0x38
  ldr x23, [sp, #0xe0]
  str x19, [x22]
  mov x0, x21
  mov x1, x22
  bl $+0x2b0
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x288
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x12, x9
  orr x11, x11, x23
  cmp x12, x13
  cset x13, ne
  ldr x14, [sp, #0xa8]
  and x13, x13, x14
  cbnz x13, $+0x18
  mov x23, x11
  mov x25, x12
  ldr x11, [sp, #0xc8]
  mov x25, x12
  b $+0x60
  mov x9, x21
  mov x23, x9
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x26, x9
  add x25, x25, x23
  orr x24, x24, x11
  mov x9, x25
  mov x21, x9
  str x19, [x22]
  mov x0, x21
  mov x1, x22
  bl $+0x524
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x200
  mov x9, x23
  mov x21, x9
  mov x23, x24
  mov x25, x26
  cmp x25, x11
  cset x11, ne
  ldr x15, [sp, #0xc0]
  and x11, x11, x15
  cbnz x11, $+0x14
  mov x24, x23
  mov x11, x25
  mov x11, x25
  b $+0x60
  mov x9, x21
  mov x24, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x25, x9
  add x12, x12, x24
  orr x23, x23, x11
  mov x9, x12
  mov x21, x9
  str x19, [x22]
  mov x0, x21
  mov x1, x22
  bl $+0x7a0
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x180
  mov x9, x24
  mov x21, x9
  mov x24, x23
  mov x11, x25
  cbnz x11, $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x144
  mov x23, x24
  mov x23, x24
  b $+0x8
  mov x23, x24
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x10c
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xf4
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xdc
  ldrb w9, [x19]
  mov x24, x9
  add x19, x19, #0x1
  ldr x13, [sp, #0xd0]
  cmp x24, x13
  cset x25, ne
  cbnz x25, $+0x1c
  mov x9, #<imm>
  mov x25, x9
  mov x11, x25
  mov x12, x23
  mov x12, x23
  b $+0x60
  mov x9, #<imm>
  mov x11, x9
  mov x10, #<imm>
  cmp x24, x10
  b.ne $+0x18
  mov x9, #<imm>
  mov x11, x9
  mov x12, x23
  mov x12, x23
  b $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x58
  mov x9, #<imm>
  mov x11, x9
  mov x12, x23
  mov x23, x12
  cbnz x11, $+0xdc0
  mov x11, x23
  and x11, x11, x12
  cmp x11, x12
  b.ne $+0x8
  b $+0x10
  mov w9, #0xa
  str w9, [x22, #0x10]
  b $+0x24
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xf0
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xf0
  ret
