kajit/src/snapshots/kajit__disasm_tests__disasm_postcard_all_scalars_aarch64.snap
---
source: kajit/src/disasm_tests.rs
expression: out
---
=== postcard/all_scalars ===
> sub sp, sp, #0x1b0
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x40
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0xfbc
  mov x9, #<imm>
  mov x11, x9
  mov x26, x11
  mov x9, #<imm>
  mov x11, x9
  mov x25, x11
  mov x9, #<imm>
  mov x11, x9
  mov x23, x11
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x50]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x58]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x60]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x68]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x70]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x78]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x80]
  mov x9, #<imm>
  mov x11, x9
  mov x24, x11
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x88]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x90]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x98]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xa0]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xa8]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xb0]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xb8]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xc0]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xc8]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xd0]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xd8]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xe0]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xe8]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xf0]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xf8]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x100]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x108]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x110]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x118]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x120]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x128]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x130]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x138]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x140]
  mov x9, #<imm>
  mov x14, x9
  str x14, [sp, #0x148]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x150]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x158]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x160]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x168]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x41
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0xdb4
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xd9c
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xd84
  ldrb w9, [x19]
  mov x12, x9
  add x19, x19, #0x1
  mov x11, x26
  and x11, x11, x12
  mov x13, x25
  and x12, x12, x13
  mov x13, x23
  cmp x12, x13
  cset x12, ne
  cbnz x12, $+0x24
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x12, x9
  mov x23, x12
  mov x23, x12
  ldr x12, [sp, #0x50]
  b $+0x114
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x14, x9
  str x11, [sp, #0x170]
  mov x11, x13
  str x11, [sp, #0x178]
  mov x11, x12
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xcf8
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x3, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x2, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xcb0
  ldrb w9, [x19]
  mov x23, x9
  add x19, x19, #0x1
  ldr x11, [sp, #0x178]
  mov x4, x11
  add x4, x4, x14
  ldr x11, [sp, #0x180]
  mov x13, x11
  sub x13, x13, x3
  and x15, x15, x23
  mov x11, x23
  and x11, x11, x1
  cmp x13, x2
  cset x12, ne
  ldr x14, [sp, #0x178]
  mov x26, x15
  lsl x26, x26, x14
  cmp x11, x0
  cset x0, ne
  ldr x11, [sp, #0x170]
  orr x11, x11, x26
  mov x1, x0
  and x1, x1, x12
  mov x12, x11
  str x12, [sp, #0x170]
  mov x14, x4
  str x14, [sp, #0x178]
  mov x11, x13
  str x11, [sp, #0x180]
  mov x11, x15
  mov x12, x0
  cbnz x1, $+0xc4c
  ldr x11, [sp, #0x170]
  mov x23, x12
  cmp x23, x12
  cset x13, ne
  ldr x12, [sp, #0x58]
  mov x9, x11
  mov x10, x12
  lsr x9, x9, x10
  mov x12, x9
  cbnz x13, $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0xbf8
  ldr x13, [sp, #0x60]
  cmp x12, x13
  cset x12, ne
  cbnz x12, $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0xbd8
  mov x9, x11
  strh w9, [x21, #0x3c]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xbb8
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xba0
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  ldr x23, [sp, #0x68]
  mov x13, x11
  and x13, x13, x23
  ldr x15, [sp, #0x70]
  mov x23, x11
  and x23, x23, x15
  ldr x14, [sp, #0x78]
  cmp x23, x14
  cset x23, ne
  cbnz x23, $+0x24
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x25, x9
  mov x12, x25
  mov x12, x25
  ldr x14, [sp, #0x80]
  b $+0x118
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x14, x9
  str x13, [sp, #0x188]
  mov x26, x12
  str x26, [sp, #0x190]
  mov x12, x11
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xb0c
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x3, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x2, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xac4
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  ldr x12, [sp, #0x190]
  mov x4, x12
  add x4, x4, x14
  ldr x12, [sp, #0x198]
  mov x13, x12
  sub x13, x13, x3
  and x15, x15, x11
  and x11, x11, x1
  cmp x13, x2
  cset x12, ne
  ldr x14, [sp, #0x190]
  mov x9, x15
  mov x10, x14
  lsl x9, x9, x10
  mov x14, x9
  cmp x11, x0
  cset x3, ne
  ldr x11, [sp, #0x188]
  orr x11, x11, x14
  mov x8, x3
  and x8, x8, x12
  mov x12, x11
  str x12, [sp, #0x188]
  mov x14, x4
  str x14, [sp, #0x190]
  mov x11, x13
  str x11, [sp, #0x198]
  mov x11, x15
  mov x12, x3
  cbnz x8, $+0xab0
  ldr x11, [sp, #0x188]
  mov x13, x11
  cmp x12, x14
  cset x23, ne
  mov x11, x24
  mov x25, x13
  lsr x25, x25, x11
  cbnz x23, $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0xa10
  ldr x11, [sp, #0x88]
  cmp x25, x11
  cset x11, ne
  cbnz x11, $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x9f0
  mov x9, x13
  str w9, [x21, #0x30]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x9d0
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x9b8
  ldrb w9, [x19]
  mov x12, x9
  add x19, x19, #0x1
  ldr x11, [sp, #0x90]
  and x11, x11, x12
  ldr x13, [sp, #0x98]
  and x12, x12, x13
  ldr x13, [sp, #0xa0]
  cmp x12, x13
  cset x12, ne
  cbnz x12, $+0x2c
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x12, x9
  mov x13, x11
  mov x15, x14
  mov x23, x12
  mov x23, x12
  ldr x12, [sp, #0xa8]
  b $+0x114
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x14, x9
  mov x26, x11
  mov x11, x13
  str x11, [sp, #0x1a0]
  mov x11, x12
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x924
  mov x9, #<imm>
  mov x17, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x3, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x8dc
  ldrb w9, [x19]
  mov x24, x9
  add x19, x19, #0x1
  ldr x23, [sp, #0x1a0]
  add x15, x15, x23
  mov x14, x11
  mov x9, x14
  mov x10, x13
  sub x9, x9, x10
  mov x13, x9
  mov x0, x24
  and x0, x0, x17
  mov x11, x24
  and x11, x11, x2
  cmp x13, x3
  cset x12, ne
  mov x25, x0
  lsl x25, x25, x23
  cmp x11, x1
  cset x1, ne
  mov x11, x26
  orr x11, x11, x25
  mov x2, x1
  and x2, x2, x12
  mov x23, x15
  str x23, [sp, #0x1a0]
  mov x14, x13
  mov x3, x0
  mov x0, x1
  cbnz x2, $+0x928
  mov x13, x11
  mov x15, x14
  mov x11, x3
  mov x23, x0
  cmp x23, x12
  cset x14, ne
  ldr x12, [sp, #0xb0]
  cmp x15, x12
  cset x12, ne
  cbnz x14, $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x82c
  cbnz x12, $+0x38
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x12, x9
  and x11, x11, x14
  mov x10, #<imm>
  cmp x11, x10
  b.ne $+0x8
  b $+0x14
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x7f8
  b $+0x4
  mov x9, x13
  str x9, [x21, #0x18]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x42
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x7c4
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x7ac
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x794
  ldrb w9, [x19]
  mov x23, x9
  add x19, x19, #0x1
  ldr x12, [sp, #0xb8]
  mov x11, x23
  and x11, x11, x12
  ldr x12, [sp, #0xc0]
  and x12, x12, x23
  ldr x13, [sp, #0xc8]
  cmp x12, x13
  cset x12, ne
  cbnz x12, $+0x24
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x12, x9
  mov x13, x12
  ldr x8, [sp, #0xd0]
  mov x13, x12
  b $+0xe0
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x14, x9
  mov x24, x11
  mov x23, x13
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x70c
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x3, x9
  mov x9, #<imm>
  mov x6, x9
  mov x9, #<imm>
  mov x17, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x6c4
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  mov x14, x23
  add x13, x13, x14
  sub x12, x12, x0
  and x15, x15, x11
  and x11, x11, x3
  cmp x12, x17
  cset x23, ne
  mov x9, x15
  mov x10, x14
  lsl x9, x9, x10
  mov x14, x9
  cmp x11, x6
  cset x17, ne
  mov x11, x24
  orr x11, x11, x14
  mov x14, x13
  mov x13, x15
  mov x13, x17
  cbz x17, $+0x8
  cbnz x23, $+0x77c
  cmp x13, x8
  cset x14, ne
  ldr x13, [sp, #0xd8]
  mov x12, x11
  lsr x12, x12, x13
  mov x9, x11
  lsr w10, w9, #0x1
  and w16, w9, #0x1
  neg w16, w16
  eor w9, w10, w16
  mov x11, x9
  cbnz x14, $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x628
  ldr x13, [sp, #0xe0]
  cmp x12, x13
  cset x12, ne
  cbnz x12, $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x608
  mov x9, x11
  strh w9, [x21, #0x3e]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x5e8
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x5d0
  ldrb w9, [x19]
  mov x12, x9
  add x19, x19, #0x1
  ldr x11, [sp, #0xe8]
  and x11, x11, x12
  ldr x13, [sp, #0xf0]
  and x12, x12, x13
  ldr x13, [sp, #0xf8]
  cmp x12, x13
  cset x12, ne
  cbnz x12, $+0x24
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x12, x9
  mov x13, x12
  mov x13, x12
  ldr x17, [sp, #0x100]
  b $+0xe8
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x23, x9
  mov x14, x11
  mov x11, x12
  mov x12, x15
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x548
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x3, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x2, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x500
  ldrb w9, [x19]
  mov x23, x9
  add x19, x19, #0x1
  add x13, x13, x11
  sub x12, x12, x3
  and x15, x15, x23
  mov x24, x23
  and x24, x24, x1
  cmp x12, x2
  cset x23, ne
  mov x9, x15
  mov x10, x11
  lsl x9, x9, x10
  mov x11, x9
  cmp x24, x0
  cset x0, ne
  orr x11, x11, x14
  mov x14, x11
  mov x11, x13
  mov x13, x15
  mov x13, x0
  cbz x0, $+0x8
  cbnz x23, $+0x604
  mov x11, x14
  cmp x13, x17
  cset x13, ne
  ldr x3, [sp, #0x108]
  mov x12, x11
  lsr x12, x12, x3
  mov x9, x11
  lsr w10, w9, #0x1
  and w16, w9, #0x1
  neg w16, w16
  eor w9, w10, w16
  mov x11, x9
  cbnz x13, $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x460
  ldr x4, [sp, #0x110]
  cmp x12, x4
  cset x15, ne
  cbnz x15, $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x440
  mov x9, x11
  str w9, [x21, #0x34]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x420
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x408
  ldrb w9, [x19]
  mov x24, x9
  add x19, x19, #0x1
  ldr x5, [sp, #0x118]
  mov x11, x24
  and x11, x11, x5
  ldr x6, [sp, #0x120]
  mov x12, x24
  and x12, x12, x6
  ldr x7, [sp, #0x128]
  cmp x12, x7
  cset x12, ne
  cbnz x12, $+0x28
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x14, x9
  mov x12, x11
  mov x23, x14
  ldr x15, [sp, #0x130]
  mov x23, x14
  b $+0xe0
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x14, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x380
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x3, x9
  mov x9, #<imm>
  mov x6, x9
  mov x9, #<imm>
  mov x17, x9
  mov x9, #<imm>
  mov x0, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x338
  ldrb w9, [x19]
  mov x23, x9
  add x19, x19, #0x1
  add x14, x14, x12
  sub x13, x13, x3
  and x15, x15, x23
  mov x24, x23
  and x24, x24, x6
  cmp x13, x0
  cset x23, ne
  mov x9, x15
  mov x10, x12
  lsl x9, x9, x10
  mov x12, x9
  cmp x24, x17
  cset x0, ne
  orr x12, x12, x11
  mov x11, x12
  mov x12, x14
  mov x14, x0
  cbz x0, $+0x8
  cbnz x23, $+0x47c
  mov x12, x11
  mov x11, x15
  mov x23, x14
  cmp x23, x15
  cset x14, ne
  ldr x23, [sp, #0x138]
  cmp x13, x23
  cset x13, ne
  mov x9, x12
  lsr x10, x9, #0x1
  and x16, x9, #0x1
  neg x16, x16
  eor x9, x10, x16
  mov x12, x9
  cbnz x14, $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x294
  cbnz x13, $+0x38
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x13, x9
  and x11, x11, x14
  mov x10, #<imm>
  cmp x11, x10
  b.ne $+0x8
  b $+0x14
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x260
  b $+0x4
  mov x9, x12
  str x9, [x21, #0x20]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x38
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x22c
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x28
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x204
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x1ec
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x1d4
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  ldr x1, [sp, #0x140]
  mov x13, x11
  and x13, x13, x1
  ldr x2, [sp, #0x148]
  mov x23, x11
  and x23, x23, x2
  ldr x0, [sp, #0x150]
  cmp x23, x0
  cset x23, ne
  cbnz x23, $+0x28
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x25, x9
  mov x11, x13
  mov x12, x25
  mov x12, x25
  ldr x26, [sp, #0x158]
  b $+0xe0
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x11, x9
  mov x11, x13
  mov x13, x14
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x144
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x1, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xfc
  ldrb w9, [x19]
  mov x23, x9
  add x19, x19, #0x1
  add x14, x14, x12
  sub x13, x13, x2
  and x15, x15, x23
  mov x24, x23
  and x24, x24, x0
  cmp x13, x1
  cset x23, ne
  mov x9, x15
  mov x10, x12
  lsl x9, x9, x10
  mov x12, x9
  cmp x24, x26
  cset x26, ne
  orr x11, x11, x12
  mov x12, x14
  mov x14, x15
  mov x14, x26
  cbz x26, $+0x8
  cbnz x23, $+0x264
  mov x12, x14
  cmp x12, x26
  cset x23, ne
  ldr x25, [sp, #0x160]
  mov x9, x11
  mov x10, x25
  lsr x9, x9, x10
  mov x25, x9
  cbnz x23, $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x70
  ldr x24, [sp, #0x168]
  cmp x25, x24
  cset x12, ne
  cbnz x12, $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x50
  str x19, [x22]
  mov x0, x22
  mov x1, x11
  add x2, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x24
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x1b0
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x1b0
  ret
